# genrei

./: .gitignore  LICENSE  Setup.hs  genrei.cabal  nginx.conf
src/: Main.hs
src/System/Process/: Safe.hs
src/Text/JSON/: Helpers.hs
wwwroot/: generi.css  genrei.css  genrei.js  index.html  kiboki-genrei.css  kiboki-genrei.js
